RESOLVED FIXED241503
Record InteractionRegions per RenderLayer, instead of all on the root
https://bugs.webkit.org/show_bug.cgi?id=241503
Summary Record InteractionRegions per RenderLayer, instead of all on the root
Tim Horton
Reported 2022-06-09 22:51:04 PDT
Record InteractionRegions per RenderLayer, instead of all on the root
Attachments
Tim Horton
Comment 1 2022-06-09 23:03:42 PDT
Radar WebKit Bug Importer
Comment 2 2022-06-16 22:52:12 PDT
EWS
Comment 3 2022-06-16 23:58:46 PDT
Committed r295630 (251635@main): <https://commits.webkit.org/251635@main> Reviewed commits have been landed. Closing PR #1438 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.