Record InteractionRegions per RenderLayer, instead of all on the root https://bugs.webkit.org/show_bug.cgi?id=241503 <rdar://problem/93855866>

Reviewed by Simon Fraser.

* Source/WebCore/page/DebugPageOverlays.cpp:
(WebCore::pathsForRegion):
(WebCore::InteractionRegionOverlay::activeLayer const):
(WebCore::InteractionRegionOverlay::activeRegion const):
(WebCore::InteractionRegionOverlay::drawRect):
Hit test to the correct layer and retrieve regions from that layer for the debug overlay.
Also, fix some coordinate conversion now that we actually see non-root layers.

* Source/WebCore/page/InteractionRegion.cpp:
(WebCore::cursorTypeForElement):
(WebCore::interactionRegionForRenderedRegion):
(WebCore::absoluteBoundingRectForRange): Deleted.
(WebCore::regionForElement): Deleted.
(WebCore::interactionRegions): Deleted.
* Source/WebCore/page/InteractionRegion.h:
Refactor InteractionRegion to take the same arguments as EventRegion::unite(),
so we can call it from there. Use the painting-originated rects in the Region,
instead of computing them ourselves.

* Source/WebCore/rendering/EventRegion.cpp:
(WebCore::EventRegionContext::unite):
(WebCore::EventRegionContext::uniteInteractionRegions):
(WebCore::EventRegionContext::copyInteractionRegionsToEventRegion):
(WebCore::EventRegion::computeInteractionRegions): Deleted.
* Source/WebCore/rendering/EventRegion.h:
Collect InteractionRegions in a HashMap by element identifier, in order to
unite the rects for a given element -- but not *across* elements, like other EventRegions.
We need to keep them separate so that we can add an indicator for the united region.
Also, unusually, we maintain this map on the EventRegionContext as we paint, and copy them
to the serialized type at the end, to avoid having two different members on
EventRegion that are only valid on opposite sides of the process boundary.

* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateEventRegion):
Stop computing interaction regions for the root layer.

* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paintObject):
* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::updateScrollLayerClipping):
* Source/WebCore/rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::paint):
* Source/WebCore/rendering/TextBoxPainter.cpp:
(WebCore::TextBoxPainter<TextBoxPath>::paint):
Plumb the renderer through to EventRegionContext so that we can use it in
InteractionRegion::interactionRegionForRenderedRegion.

* LayoutTests/interaction-region/click-handler-in-shadowed-layer-expected.txt: Added.
* LayoutTests/interaction-region/click-handler-in-shadowed-layer.html: Added.
* LayoutTests/interaction-region/inline-link-in-layer-expected.txt: Added.
* LayoutTests/interaction-region/inline-link-in-layer.html: Added.
* LayoutTests/interaction-region/inline-link-in-composited-iframe-expected.txt: Added.
* LayoutTests/interaction-region/inline-link-in-composited-iframe.html: Added.
* LayoutTests/interaction-region/inline-link-in-non-composited-iframe-expected.txt: Added.
* LayoutTests/interaction-region/inline-link-in-non-composited-iframe.html: Added.
Add some tests.

Canonical link: https://commits.webkit.org/251635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295630 268f45cc-cd09-0410-ab3c-d52691b4dbfc